# nascam-imager-readfile

./: LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
idl/: README.md  nascam_imager_readfile.pro
python/: .flake8  Makefile  README.md  pyproject.toml
python/examples/: read_nascam_data.ipynb
python/nascam_imager_readfile/: __init__.py  _nascam.py
python/tests/test_suite/: test_read.py  test_version.py
python/tests/test_suite/data/: 20090209_0600_gill_nascam-iccd02.png.tar  20090209_0601_gill_nascam-iccd02.png.tar  20090209_0602_gill_nascam-iccd02.png.tar  20090209_0603_gill_nascam-iccd02.png.tar  20090209_0604_gill_nascam-iccd02.png.tar
python/tools/: bump_version.py
